# pomodoro

./: pyproject.toml
.tools/: increment_major.sh  increment_minor.sh
src/pomodoro/: __init__.py  cli.py
