[project]
name = "pomodoro"
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "today @ git+https://github.com/KUKARAF/diary.git",
]

[project.scripts]
pomodoro = "pomodoro.cli:main"
distracted = "pomodoro.cli:distracted_main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
